@@ -277,6 +277,10 @@ of contacting you should we need more information. If you choose to file your
 report anonymously, at least check every so often whether your report page 
 has something new posted, as it probably would.
 
+If the above explanations seem vague, please follow this link
+http://www.chiark.greenend.org.uk/~sgtatham/bugs.html
+
+
 *** End of GRAMPS Frequently Asked Questions ***
 
 $Id$
